Stylized project repo pages

--- a/index.html
+++ b/index.html
@@ -1,12 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Advanced Interactive Prototyping</title>
-</head>
-<body>
-    <h1>Class Documentation</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur esse accusamus tempora iure hic facilis, eligendi praesentium perspiciatis in similique nemo officiis suscipit ad fugit aspernatur voluptates excepturi reprehenderit a?</p>
-</body>
+
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Advanced Interactive Prototyping Repository</title>
+        <link href="style.css" rel="stylesheet">
+    </head>
+
+    <body>
+
+        <div class="nav-bar">
+            <a href="https://specos.design/" class="nav-home-btn">
+                <img src="resources/images/specos_logo.svg" alt="">
+            </a>
+        </div>
+
+        <div class="hero flex-container">
+            <div class="header-container flex-container">
+                <h1>Clyde's Adv Interactive Prototyping Repo</h1>
+                <h2>Some serious responses here!</h2> 
+            </div>
+        </div>
+
+        <div class="repo flex-container">
+            <div class="repo-grid grid-container">
+
+                <a href="responses/week3_responses.html" class="repo-container grid-container">
+                    <h6 class="repo-h6">2020.09.26</h6>
+                    <h4 class="repo-h4">Week 3 Response</h4>
+                    <h5 class="repo-h5">Content still need to be added...This is just a placeholder :)</h5>
+                </a>
+    
+                <a class="repo-container grid-container">
+                    <h6 class="repo-h6"></h6>
+                    <h6 class="repo-h6">More stuff yet to come...</h6>
+                </a>
+
+            </div>
+        </div>
+    
+    </body>
+
 </html>
