Update repo pages styles
Update repo pages styles.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
         <div class="nav-bar">
             <a href="https://specos.design/" class="nav-home-btn">
-                <img src="resources/images/specos_logo.svg" alt="">
+                <img src="resources/images/specos_logo.svg" alt="" class="nav-home-btn-img">
             </a>
         </div>
 
