Adding Project 1 Summary and Week 3 Reading Responses.

--- a/index.html
+++ b/index.html
@@ -26,11 +26,18 @@
         <div class="repo flex-container">
             <div class="repo-grid grid-container">
 
-                <a href="responses/week3_responses.html" class="repo-container grid-container">
-                    <h6 class="repo-h6">2020.09.26</h6>
-                    <h4 class="repo-h4">Week 3 Response</h4>
-                    <h5 class="repo-h5">Content still need to be added...This is just a placeholder :)</h5>
+                <a href="responses/project_1_representation_summary.html" class="repo-container grid-container">
+                    <h6 class="repo-h6">2020.10.04</h6>
+                    <h4 class="repo-h4">Project 1: Representation Summary</h4>
+                    <h5 class="repo-h5">In this assignment, we have to visualize and recreate a natural system containing background, interactable elements, and user input. My prototype put the user into a natural...</h5>
                 </a>
+
+                <a href="responses/week3_reading_responses.html" class="repo-container grid-container">
+                    <h6 class="repo-h6">2020.09.26</h6>
+                    <h4 class="repo-h4">Week 3 Reading Response</h4>
+                    <h5 class="repo-h5">Is a brick a prototype? The answer depends on how it is used. If it is used to represent the weight and scale of some future artifact, then it certainly is: it prototypes the weight and scale of the artifact. This example shows that prototypes are...</h5>
+                </a>
+
     
                 <a class="repo-container grid-container">
                     <h6 class="repo-h6"></h6>
