--- a/index.html
+++ b/index.html
@@ -26,6 +26,24 @@
         <div class="repo flex-container">
             <div class="repo-grid grid-container">
 
+                <a class="repo-container grid-container">
+                    <h6 class="repo-h6">2020.12.05</h6>
+                    <h4 class="repo-h4">Project 4 Summary</h4>
+                    <h5 class="repo-h5">Yet to come...</h5>
+                </a>
+
+                <a href="responses/project_3_summary.html" class="repo-container grid-container">
+                    <h6 class="repo-h6">2020.11.03</h6>
+                    <h4 class="repo-h4">Project 3 Summary</h4>
+                    <h5 class="repo-h5">The third project is where we push the capabilities of the Particle Argon board to the next level. We are imagining a data visualization system using Argon's collected data, transmitted through the cloud, and visualized in the browser using P5.js...</h5>
+                </a>
+
+                <a href="responses/project_2_control_summary.html" class="repo-container grid-container">
+                    <h6 class="repo-h6">2020.11.03</h6>
+                    <h4 class="repo-h4">Project 2: Control Summary</h4>
+                    <h5 class="repo-h5">In this assignment, we are required to further develop our previous project with the utilization of components like a potentiometer, buttons, etc., to replace our previous simple mouse / keyboard input. Based on the bubble / park natural system...</h5>
+                </a>
+
                 <a href="responses/project_1_representation_summary.html" class="repo-container grid-container">
                     <h6 class="repo-h6">2020.10.04</h6>
                     <h4 class="repo-h4">Project 1: Representation Summary</h4>
@@ -36,12 +54,6 @@
                     <h6 class="repo-h6">2020.09.26</h6>
                     <h4 class="repo-h4">Week 3 Reading Response</h4>
                     <h5 class="repo-h5">Is a brick a prototype? The answer depends on how it is used. If it is used to represent the weight and scale of some future artifact, then it certainly is: it prototypes the weight and scale of the artifact. This example shows that prototypes are...</h5>
-                </a>
-
-    
-                <a class="repo-container grid-container">
-                    <h6 class="repo-h6"></h6>
-                    <h6 class="repo-h6">More stuff yet to come...</h6>
                 </a>
 
             </div>
