Update repo page.
Update repo page.

--- a/responses/project_1_representation_summary.html
+++ b/responses/project_1_representation_summary.html
@@ -25,7 +25,7 @@
         </div>
 
         <div class="article-paragraph-container flex-container">
-            <div class="article-paragraph flex-container">
+            <div class="article-paragraph grid-container">
                 <p>In this assignment, we have to visualize and recreate a natural system containing background, interactable elements, and user input. My prototype put the user into a natural environment where trees and wind exist. The user can blow bubbles into the environment and can control the weather in the environment. I considered this scenario because I was fascinated by one of the most classic Windows screensavers, the bubbles, and I want to recreate it with some more elements that users can interact with their mouse and keyboard.</p>
                 <p>The following image is the diagram that represents this natural system. By separating different elements into such form, I translated them into code more efficiently, especially for the moving elements: the leaves and the bubbles.</p>
                 <img src="../resources/images/project_1_representation_summary/project_1_diagram.png">
