--- a/responses/project_2_control_summary.html
+++ b/responses/project_2_control_summary.html
@@ -25,7 +25,7 @@
         </div>
 
         <div class="article-paragraph-container flex-container">
-            <div class="article-paragraph flex-container">
+            <div class="article-paragraph grid-container">
                 <p>In this assignment, we are required to further develop our previous project with the utilization of components like a potentiometer, buttons, etc., to replace our previous simple mouse / keyboard input. Based on the bubble / park natural system, I started pushing the environmental control further and allowing the user to control more elements in the scene. At the same time, still retain the previous easy and intuitive input option for the users.</p>
                 <p>I further introduced more environmental factors into the scene on the software side: a basic graphical representation of the time (sun and moon) and surroundings (tree), while adding more controls to these environments. The user can now change the day time in the scene, and the general lighting of the scene and the sun / moon will also be changed with the user's interaction. The previously existed elements, including bubbles and wind, are even more visually intriguing. The bubble now comes with a more realistic gradient in color, and the wind will change the environment's dusty level based on its strength.</p>
                 <!-- <img src="../resources/images/project_1_representation_summary/project_1_diagram.png"> -->
