Updated index page.
Updated index page.

--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
         <div class="repo flex-container">
             <div class="repo-grid grid-container">
 
-                <a class="repo-container grid-container">
-                    <h6 class="repo-h6">2020.12.05</h6>
+                <a href="responses/project_4_summary.html" class="repo-container grid-container">
+                    <h6 class="repo-h6">2020.12.14</h6>
                     <h4 class="repo-h4">Project 4 Summary</h4>
-                    <h5 class="repo-h5">Yet to come...</h5>
+                    <h5 class="repo-h5">The fourth project is where we can start to pivoting on the aspect that we are interested in. I was always fascinated by how long-term accumulated data from a single person can be generated and visualized, so with this...</h5>
                 </a>
 
                 <a href="responses/project_3_summary.html" class="repo-container grid-container">
